[project]
name = "mlx-server"
version = "0.1.0"
description = "Starlette wrapper around mlx_lm.server: OpenAI-style API and model lifecycle endpoints"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mlx-lm>=0.31.2",
    "pyyaml>=6.0.3",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "xxhash>=3.6.0",
]

[project.scripts]
mlx-server = "mlx_server.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ty.environment]
python-version = "3.12"

# mlx-lm·믹스인 패턴으로 인한 오탐이 많아 우선 경고로 두고, 점진적으로 수정·좁힌다.
[tool.ty.rules]
invalid-argument-type = "warn"
invalid-assignment = "warn"
invalid-parameter-default = "warn"
invalid-return-type = "warn"
missing-typed-dict-key = "warn"
unknown-argument = "warn"
unresolved-attribute = "warn"
unresolved-import = "warn"
unsupported-operator = "warn"

[tool.ty.terminal]
error-on-warning = false
